DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Jul-10-2003 nonchocoboy Updated to JCCL 0.12.0 API for both Java and C++.
                        NEW VERSION: 0.13.0
Jun-25-2003 patrickh    Allow the use of X11 on Mac OS X instead of the Carbon
                        UI classes.
                        NEW VERSION: 0.12.3
Jun-16-2003 patrickh    Fixed initialization bugs with the MotionStar driver.
                        NEW VERSION: 0.12.2
May-30-2003 patrickh    Fixed the Polhemus Fastrak driver.  Submitted by
                        Eric Klein <elklein@ucdavis.edu>.
                        NEW VERSION: 0.12.1
May-20-2003 patrickh    configure.in requries Autoconf 2.53 or newer.
Apr-30-2003 patrickh    Added all (U.S. Latin) keyboard keys as recognized
                        input from event windows.
                        NEW VERSION: 0.11.1
Apr-30-2003 patrickh    Refactored gadget::Event and subclasses to be less
                        lame.  gadget::EventType now contains more specific
                        values.
                        NEW VERSION: 0.11.0
Apr-29-2003 patrickh    Extended gadget::EventWndow so that it can act as an
                        event source.  At this time, only the X11 windows are
                        filling the event queue.
                        NEW VERSION: 0.10.2
Apr-29-2003 patrickh    Use gadget::Keys instead of int wherever possible.
                        NEW VERSION: 0.10.1
Apr-28-2003 patrickh    Renamed all keyboard-related classes to reflect that
                        they are window-based event sources.  For example,
                        gadget::Keyboard is now gadget::EventWindow.
                        NEW VERSION: 0.10.0
Apr-11-2003 allenb      Refactored proxy registration (and API) as part of the 
                        vrj module simulator refactoring.
                        NEW VERSION: 0.9.0